--- a/apps/frontend/src/app.css
+++ b/apps/frontend/src/app.css
@@ -1,6 +1,8 @@
 @import 'tailwindcss';
+@import 'tailwindcss/preflight';
+@import 'tailwindcss/utilities';
 
 ActionBar {
-  background-color: #65adf1;
-  color: white;
+	background-color: #65adf1;
+	color: white;
 }
